@@ -6,6 +6,9 @@ Changes between 1.3.0 and 1.3.1
   to the underlying capturing functionality to avoid race 
   conditions).
 
+- fix issue95: late-import zlib so that it's not required 
+  for general py.test startup. 
+
 - make py.test.cmdline.main() return the exitstatus 
   instead of raising (which is still done by py.cmdline.pytest())
   and make it so that py.test.cmdline.main() can be called
